--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
 ]
 dependencies = [
   "matplotlib >=3.5.0",
-  "numpy >=1.21.0,<2.0.0",
+  "numpy >=1.21.0",
   "platformdirs >=3.8.1",
 ]
 dynamic = ["version"]
