--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,9 +1,16 @@
-name: Python package
+name: Build package
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,5 +28,3 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ruff
-    - name: Lint with ruff
-      run: ruff check src/
