--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,5 +21,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ruff
-    - name: Lint with ruff
-      run: ruff check src/
+    # - name: Lint with ruff
+    #   run: ruff check src/
