--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,5 +23,7 @@ jobs:
         python -m pip install ruff
     # - name: Lint with ruff
     #   run: ruff check src/
+    - name: Install package
+      run: pip install .
     - name: Run doctest
       run: python -m cocopp.test doctest
