--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install build
     - name: Build source Python package
       run: python -m build -s -o dist .
     - name: Publish release distributions to PyPI
